[workspace]
resolver = "2"
members = [
    "app",
    "rg_common",
    "rg_ecs",
    "rg_math",
    "rg_macros",
    "rg_net",
    "rg_vulkan",
]

[profile.dev]
opt-level = 0                # Explicitly disables all high-level optimizations
split-debuginfo = "unpacked" # Can improve debugger behavior on macOS/Windows

[workspace.dependencies]
anyhow = "1.0.104"
rsa = "0.9.6"
rand = "0.8.5"
serde = "1.0.204"
toml = "0.9.2"
argh = "0.1.13"
mio = "1.0.3"
paste = "1.0.15"
winit = "0.30.12"
thiserror = "2.0.17"
dirs = "6.0.0"
erased-serde = "0.4.10"
uuid = "1.18.1"
itertools = "0.14.0"
once_cell = "1.21.4"
syn = "3.0.3"
quote = "1.0.47"
proc-macro2 = "1.0.94"
approx = "0.5.1"
num_enum = "0.7.6"
ash = "0.38.0"
winapi = "0.3.9"
raw-window-handle = "0.6.2"
ash-window = "0.13.0"
cgmath = "0.18.0"
png = "0.18.1"
pathdiff = "0.2"
glam = "0.33.2"
bitflags = "2.13.1"
fixedbitset = "0.5.7"
indexmap = "2.14.0"
rustc-hash = "2.1.3"
tokio = "1.53.1"
tokio-util = "0.7"
flume = "0.12.0"
bytes = "1.12.1"
tracing = "0.1.44"
tracing-subscriber = "0.3"
tracing-appender = "0.2"
