[package]
name = "app"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.22"
log4rs = "1.3.0"
rg_common = { path = "../rg_common" }
rg_math = { path = "../rg_math" }
rg_macros = { path = "../rg_macros" }
rg_net = { path = "../rg_net" }
rg_vulkan = { path = "../rg_vulkan" }
anyhow = "1.0.86"
rsa = { version = "0.9.6", features = ["serde"] }
rand = "0.8.5"
serde = {  version = "1.0.204", features = ["derive"] }
toml = "0.9.2"
snafu = "0.8.4"
argh = "0.1.13"
mio = { version="1.0.3",features = ["os-poll", "net"]}
paste = "1.0.15"
winit = "0.30.12"
