[package]
name = "app"
version = "0.1.0"
edition = "2024"

[dependencies]
rg_common = { path = "../rg_common" }
rg_math = { path = "../rg_math" }
rg_macros = { path = "../rg_macros" }
rg_net = { path = "../rg_net" }
rg_vulkan = { path = "../rg_vulkan" }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt", "time", "chrono", "local-time"] }
tracing-appender = { workspace = true }
anyhow = { workspace = true }
rsa = { workspace = true, features = ["serde"] }
rand = { workspace = true }
serde = { workspace = true, features = ["derive"] }
toml = { workspace = true }
argh = { workspace = true }
paste = { workspace = true }
winit = { workspace = true }
thiserror = { workspace = true }
glam = { workspace = true }
indexmap = { workspace = true }
rustc-hash = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "net", "macros"] }
tokio-util = { workspace = true, features = ["full"] }
flume = { workspace = true }
bytes = { workspace = true }

[build-dependencies]
shaderc = "0.10.1"
pathdiff = { workspace = true }
