[package]
name = "rg_common"
version = "0.1.0"
edition = "2024"

[dependencies]
rg_macros = { path = "../rg_macros" }
rg_ecs = { path = "../rg_ecs" }
log = { workspace = true }
dirs = { workspace = true }
toml = { workspace = true }
serde = { workspace = true, features = ["derive", "rc"] }
erased-serde = { workspace = true }
argh = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
thiserror = { workspace = true }
rand = { workspace = true }
glam = { workspace = true }
bitflags = { workspace = true }
fixedbitset = { workspace = true }
