[package]
name = "rg_ecs"
version = "0.1.0"
edition = "2021"

[dependencies]
itertools = "0.8"
paste = "1.0"
snafu = "0.8.4"
once_cell = "1.20.0"
fxhash = "0.2.1"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "ecs_benchmark"
harness = false

[profile.bench]
debug = true