[package]
name = "rg_ecs"
version = "0.1.0"
edition = "2024"

[dependencies]
itertools = "0.14.0"
paste = "1.0"
once_cell = "1.20.0"
fxhash = "0.2.1"
thiserror = "2.0.17"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "ecs_benchmark"
harness = false

[profile.bench]
debug = true
