[package]
name = "rg_ecs"
version = "0.1.0"
edition = "2024"

[dependencies]
itertools = { workspace = true }
paste = { workspace = true }
once_cell = { workspace = true }
thiserror = { workspace = true }
rustc-hash = { workspace = true }

[dev-dependencies]
criterion = { version = "0.8.2", features = ["html_reports"] }

[[bench]]
name = "ecs_benchmark"
harness = false

[profile.bench]
debug = true
