[package]
name = "rg_vulkan"
version = "0.1.0"
edition = "2024"

[dependencies]
rg_common = { path = "../rg_common" }
rg_macros = { path = "../rg_macros" }
ash = { workspace = true }
winit = { workspace = true }
winapi = { workspace = true }
raw-window-handle = { workspace = true }
ash-window = { workspace = true }
log = { workspace = true }
cgmath = { workspace = true }
thiserror = { workspace = true }
png = { workspace = true }
serde = { workspace = true, features = ["derive"] }
toml = { workspace = true }
uuid = { workspace = true }
